  to the record data and possibly add some last-minute attributes etc.
  [Peter]
+ Added cookie data to the debug information. Also did some code cleaning. 
  [Guido, Dennis]
+ Added support for externaly setting the storage / load type of an 
  attribute. This makes it possible to use real attributes as dummies
  (no loading or saving) in add/edit forms. [Peter]
* Changed function exportFile for IE7. If IE => inline to attachment [Koen]
* Fixed atkSaveHandler rollback/commit behaviour. [Peter]
* Fixed atkOci8Db/atkOci9Db rollback/commit behaviour. [Peter]
* ZendPlatform 3.x session clustering id compatibility. ZP3.x uses a hyphen
  in their session id which conflicted with the isValidSessionId function.
  [Martin] 
* Added file_exists() check to atkFileAttribute before calling the filesize() 
  function to prevent unnecessary error messages. [Patrick]
* Fixed calendar-runner. Two different types of date field (one where you input
  the date and another one where you input the date using the date selection
  boxes could cause problems because the Calendar object was re-used). [Peter]
* Fixed export handling of (extended) search values. [Peter]
* Changed onChange event for radioattrbiute to onClick event. It still uses
  the m_onchangecode just like the other attributes. [Lineke]
* Improved attribute security, attributes can now be shown in
  edit / read-only state or hidden based on record data. [Peter]
* atkQuery conditions are now always surrounded by braces to make sure
  OR conditions in other conditions can't influence the global atkQuery
  conditions. [Peter]
* Fixed saving Embeded o2m relations using transactional databases.
  Added commit() statemement after saving. [Martin]
* Refactored some functionality from atkSecurityManager to the
  auth_interface class which allows for greater control from within
  authorization classes. [Peter]
* Fixed automatic enable/disable of recordlist checkboxes. [Peter,Martin]